更新了头像，修改了媒体链接

--- a/src/content/blog/2024-08-15.md
+++ b/src/content/blog/2024-08-15.md
@@ -13,7 +13,7 @@ image: https://pic.imgdb.cn/item/66cd40d6d9c307b7e98800ed.png
 
 全部干货，看完绝对能成功搭建自己的网站！**（还不会你打我）**
 
-> 我的网站：<https://yaoqx.pages.dev>
+> 我的网站：<https://Xiesl.pages.dev>
 
 话不多说，正片开始——
 ## 1 选择 Astro 模板
