--- a/src/content/blog/2024-08-26.mdx
+++ b/src/content/blog/2024-08-26.mdx
@@ -28,8 +28,8 @@ import LinkCard from "../../components/page/LinkCard.astro";
 
 <LinkCard 
   title="Github 链接"
-  desc="https://github.com/YaoqxCN/Fastrans"
-  url="https://github.com/YaoqxCN/Fastrans"
+  desc="https://github.com/XieslCN/Fastrans"
+  url="https://github.com/XieslCN/Fastrans"
 />
 
 **求求给我点个 star 叭 qaq**
