--- a/src/content/blog/2024-08-31.mdx
+++ b/src/content/blog/2024-08-31.mdx
@@ -20,12 +20,12 @@ import Warning from "../../components/blog/warning.astro";
 import TimeLine from "../../components/page/TimeLine.astro";
 import LinkCard from "../../components/page/LinkCard.astro";
 
-就过了几天，我的 Fastrans 项目（ https://github.com/YaoqxCN/Fastrans ）又更新了两个版本，现在是 `v1.1.1`。（求个 star 谢谢！）
+就过了几天，我的 Fastrans 项目（ https://github.com/XieslCN/Fastrans ）又更新了两个版本，现在是 `v1.1.1`。（求个 star 谢谢！）
 
 <LinkCard 
   title="Github 链接"
-  desc="https://github.com/YaoqxCN/Fastrans"
-  url="https://github.com/YaoqxCN/Fastrans"
+  desc="https://github.com/XieslCN/Fastrans"
+  url="https://github.com/XieslCN/Fastrans"
 />
 
 上次我初步实现了 Fastrans 的翻译功能以及 UI，可以看看 [上次的文章](./2024-08-26)。
@@ -39,7 +39,7 @@ import LinkCard from "../../components/page/LinkCard.astro";
 ## 更新内容
 
 <Info>
-    完整 CHANGELOG 文档：https://github.com/YaoqxCN/Fastrans/blob/master/CHANGELOG.md
+    完整 CHANGELOG 文档：https://github.com/XieslCN/Fastrans/blob/master/CHANGELOG.md
 </Info>
 
 ### UI 主题
