--- a/src/content/blog/2024-08-24.md
+++ b/src/content/blog/2024-08-24.md
@@ -15,7 +15,7 @@ image: https://pic.imgdb.cn/item/66c99b7bd9c307b7e917c232.png
 
 先来看看效果：
 
-> 动态效果，可以我的主页观看：<https://github.com/YaoqxCN>
+> 动态效果，可以我的主页观看：<https://github.com/XieslCN>
 
 ![](https://pic.imgdb.cn/item/66c99bffd9c307b7e918439f.png)
 
@@ -126,7 +126,7 @@ image: https://pic.imgdb.cn/item/66c99b7bd9c307b7e917c232.png
 参照代码修改吧：
 
 ```html
-<img align="center" width="430" src="https://github-readme-stats.vercel.app/api?username=YaoqxCN&theme=github_dark&show_icons=true&show=reviews&hide_title=true&hide=contribs&hide_border=true" />
+<img align="center" width="430" src="https://github-readme-stats.vercel.app/api?username=XieslCN&theme=github_dark&show_icons=true&show=reviews&hide_title=true&hide=contribs&hide_border=true" />
 ```
 
 把 `username` 参数改成自己的 Github 用户名即可。
@@ -142,7 +142,7 @@ image: https://pic.imgdb.cn/item/66c99b7bd9c307b7e917c232.png
 参考代码：
 
 ```html
-<img align="center" width="400" src="https://streak-stats.demolab.com?user=YaoqxCN&theme=github-dark-blue&date_format=%5BY.%5Dn.j&hide_border=true" />
+<img align="center" width="400" src="https://streak-stats.demolab.com?user=XieslCN&theme=github-dark-blue&date_format=%5BY.%5Dn.j&hide_border=true" />
 ```
 
 ### 贡献统计图
@@ -154,7 +154,7 @@ image: https://pic.imgdb.cn/item/66c99b7bd9c307b7e917c232.png
 很简单，也是直接改成自己的用户名就行：
 
 ```html
-<img width="800" src="https://github-readme-activity-graph.vercel.app/graph?username=YaoqxCN&theme=github-compact&hide_border=true&area=true&custom_title=Contribution%20Graph" />
+<img width="800" src="https://github-readme-activity-graph.vercel.app/graph?username=XieslCN&theme=github-compact&hide_border=true&area=true&custom_title=Contribution%20Graph" />
 ```
 
 ### 代码时长统计
@@ -168,7 +168,7 @@ image: https://pic.imgdb.cn/item/66c99b7bd9c307b7e917c232.png
 或说回来，项目地址：<https://github.com/anuraghazra/github-readme-stats>
 
 ```html
-<img align="center" src="https://github-readme-stats.vercel.app/api/wakatime?username=YaoqxCN&theme=transparent&hide_border=true&layout=compact&langs_count=22&range=all_time" />
+<img align="center" src="https://github-readme-stats.vercel.app/api/wakatime?username=XieslCN&theme=transparent&hide_border=true&layout=compact&langs_count=22&range=all_time" />
 ```
 
 一样，将 `username` 改成自己的用户名。
@@ -182,7 +182,7 @@ image: https://pic.imgdb.cn/item/66c99b7bd9c307b7e917c232.png
 参考代码：
 
 ```html
-<img align="center" src="https://github-readme-stats.vercel.app/api/top-langs/?username=YaoqxCN&theme=transparent&hide_border=true&layout=donut-vertical&langs_count=6" />
+<img align="center" src="https://github-readme-stats.vercel.app/api/top-langs/?username=XieslCN&theme=transparent&hide_border=true&layout=donut-vertical&langs_count=6" />
 ```
 
 一样改用户名。
