也是基本模板

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -29,26 +29,18 @@ import LinkCard from "../components/page/LinkCard.astro";
 # 🏠 主页 / Home
 ---
 
-我，一名喜欢躺平的大学生。
-
-喜欢吃，喝，玩，乐 —— 当然还有编程。
-
-去逛逛这个小站吧！
-
-### 
-
 ## ✈ 导航
 
 <div class="grid grid-cols-2 gap-4">
   <LinkCard
     title="博客"
-    desc="随手一写"
+    desc="看到一些有趣的东西"
     url="/blog"
     target = "_self"
   />
   <LinkCard
     title="项目"
-    desc="用代码写一些小玩具"
+    desc="想法的实现"
     url="/project"
     target = "_self"
   />
@@ -60,14 +52,14 @@ import LinkCard from "../components/page/LinkCard.astro";
   />
   <LinkCard
     title="友链"
-    desc="志同道合的朋友们"
+    desc="有趣的人"
     url="/friend"
     target = "_self"
   />
 </div>
 
 
-## 🖊 随记
+## 🖊 随感
 
 > 走得慢也好，步子小也罢，是在往前走就好
 
