--- a/src/pages/project.mdx
+++ b/src/pages/project.mdx
@@ -20,7 +20,8 @@ import ProjectJS from "../components/ProjectJS.astro";
 
   </BaseCard>
   <div class="mt-8 mb-8">
-    <ProjectCard
+    {
+    /* <ProjectCard
       title="NFLS 论坛"
       desc="一个专门为NFLSer们搭建的论坛"
       url="http://nflser.top"
@@ -36,7 +37,8 @@ import ProjectJS from "../components/ProjectJS.astro";
       image="https://pic.imgdb.cn/item/66cbee80d9c307b7e9f84d1b.png"
       badge="Python"
       target="_blank"
-    />
+    /> */
+    }
   </div>
 </BaseLayout>
 <ProjectJS />
