也是基本框架

--- a/src/content/blog/2024-11-12(工作篇).md
+++ b/src/content/blog/2024-11-12(工作篇).md
@@ -8,7 +8,8 @@ tags:
   - 实习
 image: https://imgs.699pic.com/images/501/004/811.jpg!list1x.v2
 ---
-##### 测试流程：
+#### 实习-----------软件测试
+##### 测试流程： 
 
 - 根据客户需求提取功能模块
 
