--- a/src/content/blog/2024-11-16(学习篇).md
+++ b/src/content/blog/2024-11-16(学习篇).md
@@ -9,8 +9,10 @@ tags:
   - Blog
 image: https://image-cdn.learnin.tw/bnextmedia/image/album/2018-08/img-1535339327-11350.jpg?w=600&output=webp
 ---
+
 #### git主要命令
-```
+
+```bash
 git init // 初始化本地仓库-------------------------常用
 git status // 查看当前仓库状态
 git add . // 添加所有文件到暂存区-----------常用
@@ -27,5 +29,41 @@ git log // 查看提交历史
 git reset --hard HEAD^ // 回退到上一个版本
 git reset --hard HEAD^^ // 回退到上上个版本
 git clone // 克隆远程仓库到本地
+git config --edit // 编辑git配置
+git remote add origin // 添加远程仓库
+git remote -v // 查看远程仓库信息
+git remote rm origin // 删除远程仓库
+git remote set-url origin // 修改远程仓库地址
+git config --list // 查看git配置
 ```
+
 如果是在vscode中，可以用图形化界面操作git。
+
+#### 加深对git的理解
+
+- git是分布式版本控制系统，每个仓库都是一个完整的版本库，包括代码、文件、历史记录等。
+- git的工作流程是：先在本地创建分支，然后在分支上进行开发，开发完成后，再合并到主分支。
+- git的分支是用来开发新功能的，而主分支则用来发布稳定版本。
+- git init 初始化本地仓库，会在当前目录下创建一个.git目录，里面包含版本库的相关信息。
+- 本地仓库的三个工作区：工作区、暂存区、本地仓库。
+- 工作区：就是你在电脑里能看到的目录，比如你正在写代码的目录。
+- 暂存区：英文叫stage或index，它是一处存储文件修改信息的地方，直到你提交到本地仓库。
+
+---
+
+- 本地仓库：英文叫repository，它是git用来保存项目的元数据和对象数据库的地方。（注意本地仓库和远程仓库的区别，本地仓库没有名字，而远程仓库有别名，如origin）
+
+---
+
+- 如果你在当前分支，你可以直接用 git push 来将你本地仓库的最新提交推送到远程仓库对应分支。
+- 如果你在其他分支，你需要先用 git checkout 切换到你想推送的分支，然后再用 git push。
+- 如果你在 master 分支，你应该避免直接在 master 分支上工作，因为这是一个稳定的分支，不应该直接修改。
+- 如果你要在 master 分支上开发新功能，你应该从 master 分支上创建一个新分支，然后在新分支上开发，开发完成后再合并到 master 分支。
+
+#### 将一个项目push到两个远程仓库
+
+```bash
+git remote add Blog https://github.com/Pomelo-Xsl/Test.git  // 添加一个名为Blog的远程仓库
+git remote -v  // 查看远程仓库信息
+git push -u Blog main  // 推送本地仓库到远程仓库的main分支
+```
