格式化了一下md_blog

--- a/src/content/blog/2024-11-13(学习篇).md
+++ b/src/content/blog/2024-11-13(学习篇).md
@@ -15,11 +15,14 @@ sudo usermod -aG sudo pommelo # 给用户添加sudo权限
 su pomelo # 切换到新用户
 sudo su # 切换到root用户
 ```
+
 ```bash
 sudo apt install fish # 安装fish shell
 fish # 切换到fish shell
 ```
+
 [在debian上安装docker](https://docs.docker.com/engine/install/debian/)  ---debian官网
+
 ```bash
 # Add Docker's official GPG key:
 sudo apt-get update
@@ -35,16 +38,22 @@ echo \
   sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
 sudo apt-get update
 ```
+
 ```bash
 sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
 ```
+
 至此docker安装完成,以官网安装方法为准,可以开始部署Blog了
+
 ```bash
 sudo docker --verson # 查看docker版本
 ```
+
 ### 拉取nginx镜像
+
 docker 镜像加速源配置（切记,选择可用的镜像源）
 [参考博客](https://blog.csdn.net/llc580231/article/details/139979603)
+
 ```bash
 vim /etc/docker/daemon.json # 主要是编辑这个文件的内容就好了，特别是选择可用的镜像源，当时找了好久
 # 重新加载配置文件
@@ -52,6 +61,7 @@ sudo systemctl daemon-reload
 # 重新启动docker服务
 sudo service docker restart
 ```
+
 ```bash
 sudo docker pull nginx # 拉取nginx镜像,默认拉取最新版本
 sudo docker images # 查看本地镜像
@@ -62,7 +72,9 @@ sudo docker restart nginx-test # 重启容器
 sudo docker rm nginx-test # 删除容器
 sudo docker ps -a # 查看所有容器
 ```
+
 ### 使用docker-compose来管理容器
+
 ```bash
 sudo su # 需要切换到root用户，来安装docker-compose
 #下载docker-compose二进制文件安装
@@ -74,6 +86,7 @@ chmod +x /usr/local/bin/docker-compose
 #查看版本
 docker-compose version
 ```
+
 ```bash
 mkdir docker_workspace # 创建工作目录
 cd docker_workspace # 进入工作目录
@@ -83,7 +96,9 @@ vim docker-compose.yml # 创建docker-compose.yml文件
 vim nginx.conf # 创建nginx.conf文件
 mkdir myhtml # 创建html目录
 ```
+
 docker-compose.yml文件内容如下：
+
 ```yaml
 version: '3.6' #一定要写版本号，否则无法配置
 services:
@@ -97,7 +112,9 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./myhtml/blog:/var/www/myhtml/blog
 ```
+
 nginx.conf文件内容如下：
+
 ```conf
 user root;
 events {} # 这个必须有
@@ -116,19 +133,21 @@ http {
             index index.html; # 默认文件
         }
 ```
+
 ```bash
 scp -r .\dist\ pomelo@106.75.222.196:/home/pomelo/docker_workspace/nginx/myhtml # 上传静态文件到远程服务器
 ```
+
 ```bash
  cp dist/ blog -r # 复制静态文件到博客目录
  rm -r myhtml2 # 删除旧的静态文件目录,不小心传多了一个文件上去,哈哈哈
  ```
+
 ```bash
 docker compose up -d # 启动容器
 docker compose down # 停止容器
 docker compose ps # 查看容器状态
 docker compose restart # 重启容器
 ```
-至此，Blog部署完成，可以访问 http://106.75.222.196 查看效果
 
-
+至此，Blog部署完成，可以访问 <http://106.75.222.196> 查看效果
