--- a/src/pages/support.mdx
+++ b/src/pages/support.mdx
@@ -24,7 +24,7 @@ import LinkCard from "../components/page/LinkCard.astro";
 
 # 
 
-<img src="/support.jpg" height="700" width="500"></img>
+<img src="../../public/support.jpg" height="700" width="500"></img>
 
 
   </BaseCard>
