--- a/src/content/blog/2024-11-12(工作篇).md
+++ b/src/content/blog/2024-11-12(工作篇).md
@@ -9,30 +9,19 @@ tags:
 image: https://imgs.699pic.com/images/501/004/811.jpg!list1x.v2
 ---
 #### 实习-----------软件测试
-##### 测试流程： 
+
+##### 测试流程
 
 - 根据客户需求提取功能模块
 
-  
-
 - 然后编写测试计划
-
-  
 
 - 提取测试点
 
-  
-
 - 设计测试用例
-
-  
 
 - 用例评审之后执行测试用例
 
-  
-
 - 提交bug
-
-  
 
 - 编写测试报告
