--- a/src/content/blog/2024-11-12（健身篇）.md
+++ b/src/content/blog/2024-11-12（健身篇）.md
@@ -9,6 +9,7 @@ tags:
 image: https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2FamisXwSZLgpVBayzZR6LvCWXzTnrEkm6Cp%3DGVGIRseDdf1506934764080.jpg&thumbnail=660x2147483647&quality=80&type=jpg
 ---
 ### 新手推拉腿健身计划一周3练/6练模板
+
 ---
 
 #### 推日(练腹)
@@ -28,6 +29,7 @@ image: https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2FamisXwSZLg
 ##### 绳索下压 3组 每组10次
 
 ---
+
 #### 拉日(练腹)
 
 ##### 俯身杠铃划船 3组 每组5次
@@ -45,6 +47,7 @@ image: https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2FamisXwSZLg
 ##### 哑铃锤式弯举 3组 每组10次
 
 ---
+
 #### 腿日(练腹)
 
 ##### 深度 3组 每组5次
@@ -55,6 +58,6 @@ image: https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2FamisXwSZLg
 
 ##### 站姿提踵 4组 每组12-15次
 
-
 ---
-##### 这里最后给一个建议，就是作为新手的你每次使用计划的时候，建议你都能将重量提高一点点，尤其是像卧推之类的复合动作，只有每一次小的突破才能让你成长的更快。
+
+##### 这里最后给一个建议，就是作为新手的你每次使用计划的时候，建议你都能将重量提高一点点，尤其是像卧推之类的复合动作，只有每一次小的突破才能让你成长的更快
