对fish_blog进行了一下小修改

--- a/src/content/blog/2024-11-12(FishVim技能篇).md
+++ b/src/content/blog/2024-11-12(FishVim技能篇).md
@@ -62,7 +62,7 @@ image: https://imgs.699pic.com/images/402/143/971.jpg!list1x.v2
 - `u`：undo
 - `/`: 搜索
 
-### vscode的fishvim配置
+### vscode的settings.json文件中的fishvim配置
 
 ```json
 // =============================================
