修复了无法搜索的问题

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -37,25 +37,25 @@ import defineConfig from "../../astro.config.mjs";
   <LinkCard
     title="博客"
     desc="看到一些有趣的东西"
-    url={`${defineConfig.base}/blog`}
+    url={`${defineConfig.base}blog`}
     target = "_self"
   />
   <LinkCard
     title="项目"
     desc="想法的实现"
-    url={`${defineConfig.base}/project`}
+    url={`${defineConfig.base}project`}
     target = "_self"
   />
   <LinkCard
     title="关于"
     desc="关于我和网站"
-    url={`${defineConfig.base}/about`}
+    url={`${defineConfig.base}about`}
     target = "_self"
   />
   <LinkCard
     title="友链"
     desc="有趣的人"
-    url={`${defineConfig.base}/friend`}
+    url={`${defineConfig.base}friend`}
     target = "_self"
   />
 </div>
