--- a/src/pages/support.mdx
+++ b/src/pages/support.mdx
@@ -26,7 +26,7 @@ import defineConfig from "../../astro.config.mjs";
 
 # 
 
-<img src={`${defineConfig.base}/support.jpg`} height="700" width="500"></img>
+<img src={`${defineConfig.base}support.jpg`} height="700" width="500"></img>
 
 
   </BaseCard>
