${import.meta.env.BASE_URL}替代${defineConfig.base},注释掉了无关的import

--- a/src/content/blog/2024-11-12(FishVim技能篇).md
+++ b/src/content/blog/2024-11-12(FishVim技能篇).md
@@ -61,7 +61,9 @@ image: https://imgs.699pic.com/images/402/143/971.jpg!list1x.v2
 - `U`：redo
 - `u`：undo
 - `/`: 搜索
-
+- `dd`: 删除当前行
+- `gcc` : 注释当前行
+  
 ### vscode的settings.json文件中的fishvim配置
 
 ```json
