--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -10,7 +10,7 @@ import Warning from "../components/blog/warning.astro";
 import TimeLine from "../components/page/TimeLine.astro";
 import LinkCard from "../components/page/LinkCard.astro";
 import HomeImage from "../../public/home.webp";
-import defineConfig from "../../astro.config.mjs";
+//import defineConfig from "../../astro.config.mjs";
 
 <BaseLayout title="主页">
   <BaseCard title="Home">
@@ -37,25 +37,25 @@ import defineConfig from "../../astro.config.mjs";
   <LinkCard
     title="博客"
     desc="看到一些有趣的东西"
-    url={`${defineConfig.base}blog`}
+    url={`${import.meta.env.BASE_URL}blog`}
     target = "_self"
   />
   <LinkCard
     title="项目"
     desc="想法的实现"
-    url={`${defineConfig.base}project`}
+    url={`${import.meta.env.BASE_URL}project`}
     target = "_self"
   />
   <LinkCard
     title="关于"
     desc="关于我和网站"
-    url={`${defineConfig.base}about`}
+    url={`${import.meta.env.BASE_URL}about`}
     target = "_self"
   />
   <LinkCard
     title="友链"
     desc="有趣的人"
-    url={`${defineConfig.base}friend`}
+    url={`${import.meta.env.BASE_URL}friend`}
     target = "_self"
   />
 </div>
