--- a/src/pages/support.mdx
+++ b/src/pages/support.mdx
@@ -9,7 +9,7 @@ import Success from "../components/blog/success.astro";
 import Warning from "../components/blog/warning.astro";
 import TimeLine from "../components/page/TimeLine.astro";
 import LinkCard from "../components/page/LinkCard.astro";
-import defineConfig from "../../astro.config.mjs";
+//import defineConfig from "../../astro.config.mjs";
 
 
 <BaseLayout title="支持">
@@ -26,7 +26,7 @@ import defineConfig from "../../astro.config.mjs";
 
 # 
 
-<img src={`${defineConfig.base}support.jpg`} height="700" width="500"></img>
+<img src={`${import.meta.env.BASE_URL}support.jpg`} height="700" width="500"></img>
 
 
   </BaseCard>
