制作一个个人简历

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -19,7 +19,7 @@ import LinkCard from "../components/page/LinkCard.astro";
 - **前端框架：** Astro
 - **主题：** Frosti
 - **代码托管：** Github
-- **部署平台：** Nignx
+- **部署平台：** Nginx
 ### 网站动态
 
 <TimeLine
