简历制作了一半啦！！

--- a/src/content/blog/个人简历.mdx
+++ b/src/content/blog/个人简历.mdx
@@ -7,20 +7,94 @@ categories:
 tags:
   - 简历
   - 工作
-image: https://media.istockphoto.com/id/178149253/zh/%E7%85%A7%E7%89%87/deep-space-background.jpg?s=612x612&w=0&k=20&c=NhHQbdzkfVEYSc1fx83xpZqajY-HQzf2oEEvv7qdytQ=
+image: https://cdn.pixabay.com/photo/2021/08/15/14/47/couple-6548045_640.jpg 
 ---
 
 import ResumeBar from "../../components/resume/ResumeBar.astro";
 import ImageComponent from "../../components/resume/ImageComponent.astro";
 
 
-<div>
+
+<table>
+    <tr>
+        <td>
     <ImageComponent
       src={`${import.meta.env.BASE_URL}Top.jpg`}
       alt="个人照片"
       width="154"
       height="154"
     /> 
+      </td>
+      <td>
+
+
+      </td>
+      <td>
+        <h1>谢仕良</h1>
+                <p>性别：男</p>
+                <p>年龄：22岁</p>
+                <p>电话：13126056437</p>
+                <p>Github: https://github.com/Pomelo-Xsl</p>
+      </td>
+
+
+    </tr>
     
-</div>
-<ResumeBar>教育经历</ResumeBar>
+</table>
+<ResumeBar>教育背景</ResumeBar>
+<table>
+    <tr>
+        <td>
+            <h5>广东技术师范大学</h5>
+        </td>
+        <td>
+            <h5>软件工程</h5>
+        </td>
+        <td>
+            <h5>2021.09 - 2025.06</h5>
+        </td>
+    </tr>
+</table>  
+    <tr>
+        <strong>班级角色:</strong> 学习委员
+    </tr>
+    <tr>
+        <strong>社团:</strong> 学习部、国旗护卫队
+    </tr>
+    <tr>
+        <strong>荣誉/奖项:</strong> 国家励志奖学金、品德积极分子、工作积极分子、一星志愿者
+    </tr>
+    <tr>
+        <strong>主修课程:</strong>
+    </tr> 
+
+<ResumeBar>在校经历</ResumeBar>
+ 
+    <tr>
+        <strong>担任学习委员期间:</strong> 负责协助老师们进行教学工作并安排好班级课程以及作业的布置,能够对老师和同学们的问题进行及时的反馈。
+    </tr>
+    <tr>
+        <strong>在学习部期间:</strong> 能够积极融入部门,和师兄师姐友好相处,并组织部门的破冰活动,让我受益匪浅。
+    </tr>
+    <tr>
+        <strong>在国旗护卫队:</strong> 积极参加护卫队的训练,出席校内各种开幕式,使我更加有责任心和团队精神。
+    </tr>
+
+<ResumeBar>项目经历</ResumeBar>
+<table>
+    <tr>
+        <td>
+            <h5>个人Blog搭建</h5>
+        </td>
+        <td>
+            <h5>独立开发</h5>
+        </td>
+        <td>
+            <h5>2024.11 - 至今</h5>
+        </td>
+    </tr>
+</table> 
+<ResumeBar>技能证书</ResumeBar>
+<strong>《计算机软件设计师》(无)</strong>
+<strong>《英语四级证书》（无）</strong>
+<ResumeBar>自我介绍</ResumeBar>
