--- a/src/content/blog/2024-11-22(学习篇).md
+++ b/src/content/blog/2024-11-22(学习篇).md
@@ -10,26 +10,28 @@ tags:
 image: https://cdn.pixabay.com/photo/2023/09/10/15/33/maple-8245249_1280.jpg
 ---
 
-## Linux常用命令大全
+## Linux常用命令
 
-- mv blog/ blogc(不存在) 则是将blog重命名为blogc
-- mv blogc/ blog(已存在) 则是移动操作，将blogc移动到blog的子目录路径下
-- pwd 显示当前目录路径
-- ls 显示当前目录下的文件和目录
-- ls -l 显示详细信息，包括文件大小、权限、创建时间、修改时间等
-- la 显示所有文件，包括隐藏文件,包括文件大小、权限、创建时间、修改时间等
-- rm -r blogc/ 删除blogc目录及其子目录下的所有文件
-- mkdir blogc 创建blogc目录
-- touch file.txt 创建文件file.txt
-- cat file.txt 显示文件file.txt内容
-- echo "hello world" > file.txt 将hello world写入文件file.txt
-- echo "hello world" >> file.txt 将hello world追加到文件file.txt末尾
-- cp file.txt file2.txt 复制文件file.txt为file2.txt
-- cp -r blogc/ blog/ 复制blogc目录及其子目录下的所有文件到blog目录下
-- chomd +x file.sh 使脚本file.sh可执行
-- chmod 777 file.txt 给file.txt文件赋予所有权限
-- chmod 755 file.sh 给file.sh文件赋予执行权限
-- chmod 777 -R blogc/ 给blogc目录及其子目录下的所有文件赋予所有权限
+```bash
+mv blog/ blogc(不存在) 则是将blog重命名为blogc
+mv blogc/ blog(已存在) 则是移动操作，将blogc移动到blog的子目录路径下
+pwd 显示当前目录路径
+ls 显示当前目录下的文件和目录
+ls -l 显示详细信息，包括文件大小、权限、创建时间、修改时间等
+la 显示所有文件，包括隐藏文件,包括文件大小、权限、创建时间、修改时间等
+rm -r blogc/ 删除blogc目录及其子目录下的所有文件
+mkdir blogc 创建blogc目录
+touch file.txt 创建文件file.txt
+cat file.txt 显示文件file.txt内容
+echo "hello world" > file.txt 将hello world写入文件file.txt
+echo "hello world" >> file.txt 将hello world追加到文件file.txt末尾
+cp file.txt file2.txt 复制文件file.txt为file2.txt
+cp -r blogc/ blog/ 复制blogc目录及其子目录下的所有文件到blog目录下
+chomd +x file.sh 使脚本file.sh可执行
+chmod 777 file.txt 给file.txt文件赋予所有权限
+chmod 755 file.sh 给file.sh文件赋予执行权限
+chmod 777 -R blogc/ 给blogc目录及其子目录下的所有文件赋予所有权限
+```
 
 ### 当时想用bat脚本来实现,所以下载了个putty(是一个终端,powershell是一个CLI,putty内置有pscp)
 
@@ -37,8 +39,8 @@ image: https://cdn.pixabay.com/photo/2023/09/10/15/33/maple-8245249_1280.jpg
 pnpm run build && pscp -r -pw "'" ./dist/ pomelo@106.75.222.196:/home/pomelo/docker_workspace/nginx/myhtml/blog
 ```
 
-但是最后还是弃用了这种方式来实现一键部署,因为也是跳不过输入密码的限制,而且用pscp上传的文件会中文乱码,有点本末倒置了,还不如用scp
-nginx实现热加载也很简单,其实nginx本来就是热加载,之前的配置没用写完整,所以要执行如下操作：
+- 但是最后还是弃用了这种方式来实现一键部署,因为也是跳不过输入密码的限制,而且用pscp上传的文件会中文乱码,有点本末倒置了,还不如用scp
+- nginx实现热加载也很简单,其实nginx本来就是热加载,之前的配置没用写完整,所以要执行如下操作：
 
 ```bash
 cd /home/pomelo/docker_workspace/nginx/myhtml
