继续提交笔记

--- a/src/content/blog/2024-11-22(Python学习篇).md
+++ b/src/content/blog/2024-11-22(Python学习篇).md
@@ -10,4 +10,93 @@ tags:
 image: https://bpic.588ku.com/back_list_pic/21/08/27/5e688a080da03994d5a89c8d444af742.jpg!/fw/350/quality/95/unsharp/true/compress/true
 ---
 
+## Python常见知识点
+
+### 1. 变量类型
+
+Python中有以下几种变量类型：
+
+- 数值型：int、float、complex
+- 字符串型：str
+- 布尔型：bool
+- 列表型：list
+- 元组型：tuple
+- 字典型：dict
+- 集合型：set
+- 字节型：bytes
+
+### 2. 运算符
+
+Python中有以下几种运算符：
+
+- 算术运算符：+、-、*、/、//、%、**
+- 赋值运算符：=、+=、-=、*=、/=、//=、%=、**=
+- 比较运算符：==、!=、>、<、>=、<=
+- 逻辑运算符：and、or、not
+- 位运算符：&、|、^、~、<<、>>、<<=、>>=
+- 成员运算符：in、not in
+- 身份运算符：is、is not
+
+### 3. 控制语句
+
+Python中有以下几种控制语句：
+
+- if语句
+- for语句
+- while语句
+- try-except语句
+- with语句
+
+### 4. 函数
+
+Python中有以下几种函数：
+
+- 内置函数：abs、all、any、ascii、bin、bool、bytearray、bytes、callable、chr、classmethod、compile、complex、delattr、dict、dir、divmod、enumerate、eval、exec、filter、float、format、frozenset、getattr、globals、hasattr、hash、help、hex、id、input、int、isinstance、issubclass、iter、len、list、locals、map、max、memoryview、min、next、object、oct、open、ord、pow、print、property、range、repr、reversed、round、set、setattr、slice、sorted、staticmethod、str、sum、super、tuple、type、vars、zip
+- 自定义函数：def
+
+### 5. 类
+
+1. 定义类：class 类名(object):
+2. 类属性：self.属性名 = 属性值
+3. 实例方法：def 方法名(self, 参数列表):
+4. 类方法：@classmethod
+5. 静态方法：@staticmethod
+6. 实例化对象：对象名 = 类名()
+7. 访问实例属性：对象名.属性名
+8. 访问类属性：类名.属性名
+9. 调用实例方法：对象名.方法名(参数列表)
+10. 调用类方法：类名.方法名(参数列表)
+11. 调用静态方法：类名.方法名(参数列表)
+
+### 6. 异常处理
+
+Python中有以下几种异常处理方式：
+
+- try-except语句
+- raise语句
+- assert语句
+
+### 7. 输入输出
+
+Python中有以下几种输入输出方式：
+
+- input函数
+- print函数
+- 文件读写
+
+### 8. 其他
+
+- 多线程
+- 多进程
+- 装饰器
+- 迭代器
+- 生成器
+- 协程
+- 正则表达式
+- 序列化
+- 反射
+- 数据库操作
+- 网络编程
+- 多种编码方式
+- 单元测试
 
