--- a/src/content/blog/2024-11-23(js学习篇).md
+++ b/src/content/blog/2024-11-23(js学习篇).md
@@ -57,3 +57,149 @@ image: https://cdn.pixabay.com/photo/2023/08/29/20/00/dahlia-8222052_1280.jpg
 实际上，使用 JavaScript 完成项目并不难，关键在于逻辑思维的锻炼。像“压死小鸟”这样的纯 JavaScript 小游戏，所需的方法确实很多（很难记住），主要是功能多。因此，当需要实现某个功能时，查阅相关文档是非常有效的，主要是提升解决实际问题的能力。
 
 [不了解前端的概念就看这个](https://developer.mozilla.org/zh-CN/docs/Web)
+
+了解一下就好了，不要过分纠结于语法和方法，要多动手实践。
+
+### JS 的数据类型
+
+JS 有 6 种基本数据类型：
+
+1. 数值（Number）：整数、浮点数。
+例子：`var num1 = 10;`、`var num2 = 3.14;`
+2. 字符串（String）：由零个或多个 16 位 Unicode 字符组成的序列。
+例子：`var str1 = "Hello World!";`、`var str2 = "你好，世界！";`
+3. 布尔值（Boolean）：true 或 false。
+例子：`var bool1 = true;`、`var bool2 = false;`
+4. 数组（Array）：一组按顺序排列的元素。
+例子：`var arr1 = [1, 2, 3];`、`var arr2 = ["apple", "banana", "orange"];`
+5. 对象（Object）：由多个键值对组成的无序集合。
+例子：`var obj1 = {name: "John", age: 30};`、`var obj2 = {name: "Mike", age: 25};`
+6. null 和 undefined：null 表示一个空值，undefined 表示一个未定义的值。
+JS 还有 2 种复杂数据类型：
+
+7. 函数（Function）：由函数声明或函数表达式创建的可执行代码块。
+例子：`function add(x, y) { return x + y; }`
+8. 正则表达式（RegExp）：用于匹配字符串的模式。
+例子：`var pattern = /hello/i;` ------ 匹配 "hello" 或 "Hello"
+
+### 变量声明
+
+JS 有三种声明变量的方式：
+
+1. `var`：声明变量，可以重复声明，后面的值会覆盖前面的值。
+2. `let`：声明变量，只能在当前代码块内有效，不能重复声明，后面的值会覆盖前面的值。
+3. `const`：声明常量，只能在当前代码块内有效，不能重复声明，后面的值不能覆盖前面的值。
+
+```javascript
+var a = 10;
+var a = 20; // 变量 a 被重新赋值为 20
+
+let b = 10;
+let b = 20; // 报错，不能重复声明
+
+const c = 10;
+const c = 20; // 报错，不能重复声明
+```
+
+### 条件语句
+
+JS 有两种条件语句：
+
+1. `if`：条件判断语句。
+2. `switch`：多分支条件判断语句。
+3. `case`：多分支条件判断语句的一种分支。
+4. `default`：多分支条件判断语句的默认分支。
+
+```javascript
+if (num > 0) {
+  console.log("Positive number");
+} else if (num < 0) {
+  console.log("Negative number");
+} else {
+  console.log("Zero");
+}
+
+switch (num) {
+  case 1:
+    console.log("One");
+    break;
+  case 2:
+    console.log("Two");
+    break;
+  case 3:
+    console.log("Three");
+    break;
+  default:
+    console.log("Other number");
+}
+```
+
+### 循环语句
+
+JS 有三种循环语句：
+
+1. `for`：循环语句。
+2. `while`：循环语句。
+3. `do-while`：循环语句。
+
+```javascript
+for (let i = 0; i < 5; i++) {
+  console.log(i);
+}
+
+let i = 0;
+while (i < 5) {
+  console.log(i);
+  i++;
+}
+
+let i = 0;
+do {
+  console.log(i);
+  i++;
+} while (i < 5);
+```
+
+### 函数
+
+JS 有两种函数：
+
+1. `function`：声明函数，可以有返回值。
+2. `arrow function`：箭头函数，简化函数声明。
+
+```javascript
+function add(x, y) {
+  return x + y;
+}
+
+const add = (x, y) => x + y;
+```
+
+### 异常捕获
+
+JS 有两种异常捕获方式：
+
+1. `try-catch`：异常捕获语句。
+2. `throw`：抛出异常。
+
+```javascript
+try {
+  // 可能产生异常的代码
+} catch (error) {
+  // 捕获异常
+  console.log(error);
+}
+
+function divide(x, y) {
+  if (y === 0) {
+    throw new Error("Cannot divide by zero");
+  }
+  return x / y;
+}
+
+try {
+  console.log(divide(10, 0));
+} catch (error) {
+  console.log(error);
+}
+```
