--- a/src/pages/project.mdx
+++ b/src/pages/project.mdx
@@ -21,23 +21,25 @@ import ProjectJS from "../components/ProjectJS.astro";
   </BaseCard>
   <div class="mt-8 mb-8">
     {
-    /* <ProjectCard
-      title="NFLS 论坛"
-      desc="一个专门为NFLSer们搭建的论坛"
-      url="http://nflser.top"
-      image="https://pic.imgdb.cn/item/66c86e1fd9c307b7e9799e23.png"
-      badge="网站 - PHP"
-      github="1"
-      target="_blank"
-    />
-    <ProjectCard
-      title="Fastrans"
-      desc="一个美观简约、方便快速的翻译器。目前支持微必应、有道、搜狗翻译，以及中英互译，显示音标等功能。"
-      url="https://github.com/XieslCN/Fastrans"
-      image="https://pic.imgdb.cn/item/66cbee80d9c307b7e9f84d1b.png"
-      badge="Python"
-      target="_blank"
-    /> */
+  //   <ProjectCard
+  //     title="NFLS 论坛"
+  //     desc="一个专门为NFLSer们搭建的论坛"
+  //     url="http://nflser.top"
+  //     image="https://pic.imgdb.cn/item/66c86e1fd9c307b7e9799e23.png"
+  //     badge="网站 - PHP"
+  //     github="1"
+  //     target="_blank"
+  //   />
+
+  //  <ProjectCard
+  //     title="Fastrans"
+  //     desc="一个美观简约、方便快速的翻译器。目前支持微必应、有道、搜狗翻译，以及中英互译，显示音标等功能。"
+  //     url="https://github.com/XieslCN/Fastrans"
+  //     image="https://pic.imgdb.cn/item/66cbee80d9c307b7e9f84d1b.png"
+  //     badge="Python"
+  //     github="1"
+  //     target="_blank"
+  //   /> 
     }
   </div>
 </BaseLayout>
