学会了看官方文档

--- a/src/content/blog/2024-11-24(混淆知识卷王版).md
+++ b/src/content/blog/2024-11-24(混淆知识卷王版).md
@@ -9,7 +9,36 @@ tags:
 image: https://image-10001577.image.myqcloud.com/upload/3/20170412/1492007452202.jpg
 ---
 
+## 概念上的东西最好看官方文档 官方文档给出的解释才是最准确的
+
 ### node.js 和 nginx 的区别
 
 1. Node.js 是运行在服务器端的 JavaScript 运行环境，可以用来搭建服务器端的应用;
 2. Nginx 是一款轻量级的 Web 服务器 / 反向代理服务器及电子邮件（IMAP / POP3）代理服务器
+
+### Clash Verge(看官方文档)
+
+#### 代理
+
+- 规则：根据规则来决定流量的转发方式
+- 全局(通过代理软件将流量导向代理服务器)：所有流量都通过代理转发
+- 直连：禁用所有代理,直接连接到目标网站
+
+系统代理(在操作系统级别进行代理设置)：支持代理的软件使用流量都需要通过代理转发
+TUN模式：相当于在你网卡上新建一个虚拟网卡，然后所有的流量都要通过这个虚拟网卡发送出去。
+
+规则：默认规则由代理商来定义,也可以自定义
+
+### 外网 公网 内网 私网
+
+外网=公网=互联网
+
+内网=私网=局域网
+
+公网IP地址：公网IP地址是指在互联网上唯一的IP地址，可以被路由器识别，可以被其他计算机访问。
+
+私网IP地址：私网IP地址是指在局域网内唯一的IP地址，只能在局域网内被路由器识别，不能被其他计算机访问。
+
+### VPS(看官方文档)
+
+VPS主机使用虚拟化技术将单个物理服务器拆分为多个不同的虚拟服务器，每个虚拟服务器都有自己的操作系统、软件、数据库、文件系统等（弹性计费）
