--- a/src/content/blog/2024-11-22(学习篇).md
+++ b/src/content/blog/2024-11-22(学习篇).md
@@ -15,6 +15,7 @@ image: https://cdn.pixabay.com/photo/2023/09/10/15/33/maple-8245249_1280.jpg
 ```bash
 mv blog/ blogc(不存在) 则是将blog重命名为blogc
 mv blogc/ blog(已存在) 则是移动操作，将blogc移动到blog的子目录路径下
+mv https/ ../ 则是将https目录移动到上一级目录
 pwd 显示当前目录路径
 ls 显示当前目录下的文件和目录
 ls -l 显示详细信息，包括文件大小、权限、创建时间、修改时间等
