--- a/src/content/blog/个人简历.mdx
+++ b/src/content/blog/个人简历.mdx
@@ -7,13 +7,11 @@ categories:
 tags:
   - 简历
   - 工作
-image: https://cdn.pixabay.com/photo/2021/08/15/14/47/couple-6548045_640.jpg 
+image: https://cdn.pixabay.com/photo/2021/08/15/14/47/couple-6548045_640.jpg
 ---
 
 import ResumeBar from "../../components/resume/ResumeBar.astro";
 import ImageComponent from "../../components/resume/ImageComponent.astro";
-
-
 
 <table>
     <tr>
@@ -27,7 +25,6 @@ import ImageComponent from "../../components/resume/ImageComponent.astro";
       </td>
       <td>
 
-
       </td>
       <td>
         <h1>谢仕良</h1>
@@ -39,7 +36,7 @@ import ImageComponent from "../../components/resume/ImageComponent.astro";
 
 
     </tr>
-    
+
 </table>
 <ResumeBar>教育背景</ResumeBar>
 <table>
@@ -66,34 +63,37 @@ import ImageComponent from "../../components/resume/ImageComponent.astro";
     </tr>
     <tr>
         <strong>主修课程:</strong>
-    </tr> 
+    </tr>
 
 <ResumeBar>在校经历</ResumeBar>
- 
-    <tr>
-        <strong>担任学习委员期间:</strong> 负责协助老师们进行教学工作并安排好班级课程以及作业的布置,能够对老师和同学们的问题进行及时的反馈。
-    </tr>
-    <tr>
-        <strong>在学习部期间:</strong> 能够积极融入部门,和师兄师姐友好相处,并组织部门的破冰活动,让我受益匪浅。
-    </tr>
-    <tr>
-        <strong>在国旗护卫队:</strong> 积极参加护卫队的训练,出席校内各种开幕式,使我更加有责任心和团队精神。
-    </tr>
+
+<tr>
+  <strong>担任学习委员期间:</strong>{" "}
+  负责协助老师们进行教学工作并安排好班级课程以及作业的布置,能够对老师和同学们的问题进行及时的反馈。
+</tr>
+<tr>
+  <strong>在学习部期间:</strong>{" "}
+  能够积极融入部门,和师兄师姐友好相处,并组织部门的破冰活动,让我受益匪浅。
+</tr>
+<tr>
+  <strong>在国旗护卫队:</strong>{" "}
+  积极参加护卫队的训练,出席校内各种开幕式,使我更加有责任心和团队精神。
+</tr>
 
 <ResumeBar>项目经历</ResumeBar>
 <table>
-    <tr>
-        <td>
-            <h5>个人Blog搭建</h5>
-        </td>
-        <td>
-            <h5>独立开发</h5>
-        </td>
-        <td>
-            <h5>2024.11 - 至今</h5>
-        </td>
-    </tr>
-</table> 
+  <tr>
+    <td>
+      <h5>个人Blog搭建</h5>
+    </td>
+    <td>
+      <h5>独立开发</h5>
+    </td>
+    <td>
+      <h5>2024.11 - 至今</h5>
+    </td>
+  </tr>
+</table>
 <ResumeBar>技能证书</ResumeBar>
 <strong>《计算机软件设计师》(无)</strong>
 <strong>《英语四级证书》（无）</strong>
