更改了一下TimeLine组件，算是验证了一下自己的想法了吧

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -19,13 +19,14 @@ import LinkCard from "../components/page/LinkCard.astro";
 - **前端框架：** Astro
 - **主题：** Frosti
 - **代码托管：** Github
-- **部署平台：** Nginx
+- **部署：** Nginx/Docker/Docker Compose
+- **运行环境:** Debian 11.7 64位
 ### 网站动态
 
 <TimeLine
   items={[
+      {year: "2024.11.27", event: "这个以内容为为主的网站逐渐形成啦"},
     { year: "2024.11.11", event: "本站建立" },
-    
   ]}
 />
   </BaseCard>
