增加了一个简单的项目

--- a/src/content/blog/2024-11-24(测试前置基础知识总结).md
+++ b/src/content/blog/2024-11-24(测试前置基础知识总结).md
@@ -32,7 +32,7 @@ image: https://cdn.pixabay.com/photo/2017/03/12/11/30/alishan-2136879_1280.jpg
 - B/S架构(浏览器/服务器模式)：浏览器作为客户端，服务器作为服务端，浏览器向服务器发送请求，服务器响应请求并返回数据，浏览器显示数据
 - C/S架构(客户端/服务器模式)：客户端和服务器之间通过网络进行通信，客户端发送请求，服务器响应请求并返回数据，客户端显示数据
 
-### 常用的DOS命令
+### 常用的DOS命令(磁盘操作系统)
 
 - dir：显示目录下的文件和文件夹
 - cd：切换目录
@@ -148,3 +148,5 @@ image: https://cdn.pixabay.com/photo/2017/03/12/11/30/alishan-2136879_1280.jpg
 6. 总结测试结果：总结测试过程、结果、问题、改进措施，并制定下一阶段的测试计划。
 
 ## HTML基础
+
+还是那句话,不如来点项目,最快最实在的学习各类知识的方式
