放错了一个url

--- a/src/pages/project.mdx
+++ b/src/pages/project.mdx
@@ -24,7 +24,7 @@ import ProjectJS from "../components/ProjectJS.astro";
     <ProjectCard
       title="简易的Web服务器"
       desc="弄清楚Web服务器的工作原理，可以帮助我们更好地理解Web开发。"
-      url="http://xiesl.topblog/blog/2024-11-27简易web服务器"
+      url="https://xiesl.top/blog/support/"
       image="https://lh6.googleusercontent.com/proxy/NOVoZUyghhfbhSpyNPUXAxPeEIwkk4aTWdvhzi1HXaGYTQ84T0ci6HpQbQjOrrlJ1OYrAWKYId2bjuvlBQ9OQIdL0zL0dZ_ytxTxan29rOgplfMzLDNljoY"
       badge="Python"
       github="1"
