更改了一个url

--- a/src/pages/project.mdx
+++ b/src/pages/project.mdx
@@ -24,7 +24,7 @@ import ProjectJS from "../components/ProjectJS.astro";
     <ProjectCard
       title="简易的Web服务器"
       desc="弄清楚Web服务器的工作原理，可以帮助我们更好地理解Web开发。"
-      url="https://xiesl.top/blog/support/"
+      url="https://xiesl.top/blog/blog/2024-11-27%E7%AE%80%E6%98%93web%E6%9C%8D%E5%8A%A1%E5%99%A8/"
       image="https://lh6.googleusercontent.com/proxy/NOVoZUyghhfbhSpyNPUXAxPeEIwkk4aTWdvhzi1HXaGYTQ84T0ci6HpQbQjOrrlJ1OYrAWKYId2bjuvlBQ9OQIdL0zL0dZ_ytxTxan29rOgplfMzLDNljoY"
       badge="Python"
       github="1"
