--- a/src/content/blog/2024-11-13(部署blog学习篇).md
+++ b/src/content/blog/2024-11-13(部署blog学习篇).md
@@ -7,6 +7,7 @@ categories:
 tags:
   - Linux
   - Blog
+  - docker
 image: https://cdn.pixabay.com/photo/2016/12/23/12/40/night-1927265_1280.jpg
 ---
 ```bash
