--- a/src/content/blog/2024-11-12(FishVim技能篇).md
+++ b/src/content/blog/2024-11-12(FishVim技能篇).md
@@ -35,6 +35,7 @@ image: https://imgs.699pic.com/images/402/143/971.jpg!list1x.v2
 
 - `w`: 跳到第一个单词开头
 - `$`: 跳到行尾
+- `0`: 跳到行首
 - `gg`: 跳到文件开头
 - `G`: 跳到文件末尾
 - `f{char}`: 跳到下一个`{char}`出现的位置
@@ -50,12 +51,13 @@ image: https://imgs.699pic.com/images/402/143/971.jpg!list1x.v2
 
 - `d`: 删除
 - `y`: 复制
+- `p`: 粘贴
 - `c`: 修改（并进入插入模式）
 - `v`: 进入可视模式
 
 ---
 
-## 独有功能
+## 其他操作
 
 - `==`:格式化代码
 - `U`：redo
@@ -63,6 +65,12 @@ image: https://imgs.699pic.com/images/402/143/971.jpg!list1x.v2
 - `/`: 搜索
 - `dd`: 删除当前行
 - `gcc` : 注释当前行
+- `U` : 全部大写
+- `u` : 全部小写
+- `qq`: 记录宏（相当于寄存器,所有操作都记录到q中,一般习惯记录到q中）
+- `@q`: 执行宏
+- `zz`: 居中
+- `n`:下一个匹配的字符
   
 ### vscode的settings.json文件中的fishvim配置
 
