修复了一个页面数超过4页无法跳转的bug

--- a/src/content/blog/个人简历.mdx
+++ b/src/content/blog/个人简历.mdx
@@ -17,7 +17,7 @@ import ImageComponent from "../../components/resume/ImageComponent.astro";
     <tr>
         <td>
     <ImageComponent
-      src={`${import.meta.env.BASE_URL}Top.jpg`}
+      src={`${import.meta.env.BASE_URL}/Top.jpg`}
       alt="个人照片"
       width="154"
       height="154"
