--- a/src/pages/support.mdx
+++ b/src/pages/support.mdx
@@ -26,7 +26,7 @@ import LinkCard from "../components/page/LinkCard.astro";
 
 # 
 
-<img src={`${import.meta.env.BASE_URL}support.jpg`} height="700" width="500"></img>
+<img src={`${import.meta.env.BASE_URL}/support.jpg`} height="700" width="500"></img>
 
 
   </BaseCard>
