再次修改了页面无法跳转的问题，上次修改导致了搜索功能无法使用，只能加'/blog'上去了，所以导致兼容性没那么好，记得改就好了

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -37,25 +37,25 @@ import HomeImage from "../../public/home.webp";
   <LinkCard
     title="博客"
     desc="看到一些有趣的东西"
-    url={`${import.meta.env.BASE_URL}/blog`}
+    url={`${import.meta.env.BASE_URL}blog`}
     target = "_self"
   />
   <LinkCard
     title="项目"
     desc="想法的实现"
-    url={`${import.meta.env.BASE_URL}/project`}
+    url={`${import.meta.env.BASE_URL}project`}
     target = "_self"
   />
   <LinkCard
     title="关于"
     desc="关于我和网站"
-    url={`${import.meta.env.BASE_URL}/about`}
+    url={`${import.meta.env.BASE_URL}about`}
     target = "_self"
   />
   <LinkCard
     title="友链"
     desc="有趣的人"
-    url={`${import.meta.env.BASE_URL}/friend`}
+    url={`${import.meta.env.BASE_URL}friend`}
     target = "_self"
   />
 </div>
@@ -68,3 +68,5 @@ import HomeImage from "../../public/home.webp";
 
   </BaseCard>
 </BaseLayout>
+
+12
