改进了web服务器这个项目

--- a/src/content/blog/2024-11-27(简易web服务器).md
+++ b/src/content/blog/2024-11-27(简易web服务器).md
@@ -1,5 +1,5 @@
 ---
-title: 简易web服务器
+title: 简易的web服务器
 description: 用python实现的简易的web服务器
 pubDate: 2024 11 27
 categories:
@@ -174,3 +174,78 @@ if __name__ == '__main__':
 ```
 
 启动web服务器之后，在浏览器中输入`http://127.0.0.1:9998`即可访问到页面。
+
+## 第二版（直接用抓取的页面）
+
+```python
+# 实现一个简单的Web服务器，可以响应HTTP请求，并返回一个HTML页面。
+
+# 导入模块
+import socket # 网络通信模块
+import threading # 多线程处理请求
+import requests # 发送HTTP请求
+from bs4 import BeautifulSoup # 解析HTML源码
+
+class WebServer():
+    def __init__(self):
+        # 创建服务器套接字(打电话的座机,是TCP/IP协议的基本单元)
+        self.server = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+        # 设置端口复用
+        self.server.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, True)
+        # 绑定ip和端口号（分配号码）
+        host, port = "127.0.0.1", 9998
+        self.server.bind((host, port))
+        # 设置监听
+        self.server.listen(128)
+
+    # 处理客户端请求
+    def hand_client_request(self, client_socket):
+        try:
+            data = client_socket.recv(10000)
+            if not data:
+                # 客户端已关闭连接
+                return
+
+            recv_data = data.decode()
+            print("查看请求报文\n", recv_data)
+
+            # 获取请求路径
+            requests_path = recv_data.split(" ")[1]
+
+            # 向客户端发送消息
+            response_line = "HTTP/1.1 200 OK\r\n"
+            response_header = "Server: py1.0\r\nContent-Type: text/html\r\n\r\n"
+            try:
+                #获取自己网页登录的html源码,就是三行代码加两个库，requests和bs4
+                url = 'https://xiesl.top'
+                response = requests.get(url)
+                response_body = response.content
+            except FileNotFoundError:
+                # 文件不存在，返回404
+                response_line = "HTTP/1.1 404 NOT FOUND\r\n"
+                response_body = b"404, not found, I am sorry!!!"
+
+            response_data = (response_line + response_header).encode() + response_body
+            client_socket.send(response_data)
+        except Exception as e:
+            print("处理请求时发生错误:", e)
+        finally:
+            client_socket.close()
+
+    @classmethod
+    def start(cls):
+        # 实例化WebServer对象
+        server = cls()
+        while True:
+            # 接受客户端连接
+            client_socket, addr = server.server.accept()
+            # 创建线程处理请求
+            thread = threading.Thread(target=server.hand_client_request, args=(client_socket,))
+            thread.start()
+
+if __name__ == '__main__':
+    # 启动Web服务器
+    WebServer.start()
+```
+
+运行之后，在浏览器中输入`http://127.0.0.1:9998`即可访问到页面。
