更改了blog的登录界面，在atest那个文件夹下

--- a/src/content/blog/2024-12-01(遗留的配置ip和域名的https问题).md
+++ b/src/content/blog/2024-12-01(遗留的配置ip和域名的https问题).md
@@ -94,6 +94,6 @@ services:
 
 - sudo docker compose logs | grep "ssl"   (查看日志,加了个grep,可以定位到具体的错误,这一点倒是没有想到,hh)
 
-- curl -I <https://xiaosl.top> (查看响应头,看看是不是301跳转)
+- curl -I <http://xiesl.top> (这条指令是获取请求头的信息,可以看到返回的状态码,如果是301,就证明是跳转了)
 
 - sudo docker exec -it 64 /bin/bash (进入容器里面,64是容器的id,可以用docker ps查看)
