--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -25,6 +25,7 @@ import LinkCard from "../components/page/LinkCard.astro";
 
 <TimeLine
   items={[
+      {year: "2024.12.20", event: "删掉前端笔记,写了两篇Python笔记"},
       {year: "2024.12.13", event: "添加了四篇前端笔记"},
       {year: "2024.11.27", event: "这个以内容为为主的网站逐渐形成啦"},
     { year: "2024.11.11", event: "本站建立" },
