--- a/src/content/blog/2024-12-20(自学Python篇).md
+++ b/src/content/blog/2024-12-20(自学Python篇).md
@@ -1,6 +1,6 @@
 ---
-title: 自学python（基础篇二）
-description: YouTube
+title: Python（基础篇二）
+description: Bilibili
 pubDate: 2024 12 20
 categories:
 - 学习
