--- a/src/content/blog/登录框.mdx
+++ b/src/content/blog/登录框.mdx
@@ -39,7 +39,7 @@ image: https://tu.sioe.cn/gj/qiege/image.jpg
     </form>
   </div>
   <div class="footer">
-    备案号：粤ICP备2024340347号<br>
+    <a href="https://beian.miit.gov.cn/#/Integrated/recordQuery" target="_blank">粤ICP备2024340347号</a><br>
     公安网安备：XXXX-XXXXXX
   </div>
   <script src="script.js"></script>
